# aula20_bootcamp

./: .gitignore  docker-compose.yml  pyproject.toml
backend/: database.py  router.py
